package io.github.some_example_name;

public class GameSettings {
    public static final float STEP_TIME = 1f / 60;
    public static final int VELOCITY_ITERATIONS = 6;
    public static final int POSITION_ITERATIONS = 6;
    public static final int SCREEN_HEIGHT = 1280;
    public static final int SCREEN_WIDTH = 780;

    public static final int STARTING_ENEMY_APPEARANCE_COOL_DOWN = 1;
}
