package io.github.some_example_name.Object;

import com.badlogic.gdx.graphics.Texture;
import com.badlogic.gdx.graphics.g2d.SpriteBatch;
import com.badlogic.gdx.physics.box2d.World;

public class GameObject {
//    private final int width;
//    private final int height;
//    Texture texture;

}
